--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (3.6.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (1.25.2)\n",
+      "Requirement already satisfied: pandas in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (2.3.2)\n",
+      "Requirement already satisfied: scipy in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (1.13.1)\n",
+      "Requirement already satisfied: plotly in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (6.5.0)\n",
+      "Requirement already satisfied: lmfit in c:\\users\\user\\appdata\\roaming\\python\\python39\\site-packages (1.3.4)\n",
+      "Requirement already satisfied: requests in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (2.32.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (1.0.6)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (9.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from matplotlib) (4.38.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: narwhals>=1.15.1 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from plotly) (2.12.0)\n",
+      "Requirement already satisfied: uncertainties>=3.2.2 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from lmfit) (3.2.3)\n",
+      "Requirement already satisfied: dill>=0.3.4 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from lmfit) (0.4.0)\n",
+      "Requirement already satisfied: asteval>=1.0 in c:\\users\\user\\appdata\\roaming\\python\\python39\\site-packages (from lmfit) (1.0.6)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from requests) (2022.9.24)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from requests) (2.5.0)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from requests) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\miniconda3\\envs\\knk\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90e3b617c0464c77b69118b50288ba72",
+       "model_id": "8462128ac104480ca2ef12186c665ce4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21,7 +53,216 @@
     }
    ],
    "source": [
-    "from module import *\n",
+    "!pip install matplotlib numpy pandas scipy plotly lmfit requests\n",
+    "import os\n",
+    "import sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.integrate import odeint\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly.io as pio\n",
+    "import requests\n",
+    "from lmfit import minimize, Parameters, Parameter, report_fit\n",
+    "pio.renderers.default = \"notebook\"\n",
+    "plt.style.use('ggplot')\n",
+    "# Jupyter Specifics\n",
+    "from IPython.display import HTML\n",
+    "from ipywidgets.widgets import interact, IntSlider, FloatSlider, Layout, ToggleButton\n",
+    "\n",
+    "style = {'description_width': '100px'}\n",
+    "slider_layout = Layout(width='99%')\n",
+    "\n",
+    "\n",
+    "def ode_model(z, t, beta, sigma, gamma):\n",
+    "    \"\"\"\n",
+    "    Reference https://www.idmod.org/docs/hiv/model-seir.html\n",
+    "    \"\"\"\n",
+    "    S, E, I, R = z\n",
+    "    N = S + E + I + R\n",
+    "    dSdt = -beta*S*I/N\n",
+    "    dEdt = beta*S*I/N - sigma*E\n",
+    "    dIdt = sigma*E - gamma*I\n",
+    "    dRdt = gamma*I\n",
+    "    return [dSdt, dEdt, dIdt, dRdt]\n",
+    "\n",
+    "def ode_solver(t, initial_conditions, params):\n",
+    "    initE, initI, initR, initN = initial_conditions\n",
+    "    beta, sigma, gamma = params['beta'].value, params['sigma'].value, params['gamma'].value\n",
+    "    initS = initN - (initE + initI + initR)\n",
+    "    res = odeint(ode_model, [initS, initE, initI, initR], t, args=(beta, sigma, gamma))\n",
+    "    return res\n",
+    "    \n",
+    "    \n",
+    "response = requests.get('https://api.rootnet.in/covid19-in/stats/history')\n",
+    "covid_history = response.json()['data']\n",
+    "\n",
+    "keys = ['day', 'total', 'confirmedCasesIndian', 'confirmedCasesForeign', 'confirmedButLocationUnidentified',\n",
+    "        'discharged', 'deaths']\n",
+    "df_covid_history = pd.DataFrame([[d.get('day'), \n",
+    "                                  d['summary'].get('total'), \n",
+    "                                  d['summary'].get('confirmedCasesIndian'), \n",
+    "                                  d['summary'].get('confirmedCasesForeign'),\n",
+    "                                  d['summary'].get('confirmedButLocationUnidentified'),\n",
+    "                                  d['summary'].get('discharged'), \n",
+    "                                  d['summary'].get('deaths')] \n",
+    "                                 for d in covid_history],\n",
+    "                    columns=keys)\n",
+    "df_covid_history = df_covid_history.sort_values(by='day')\n",
+    "df_covid_history['infected'] = df_covid_history['total'] - df_covid_history['discharged'] - df_covid_history['deaths']\n",
+    "df_covid_history['total_recovered_or_dead'] = df_covid_history['discharged'] + df_covid_history['deaths']\n",
+    "\n",
+    "\n",
+    "# ref: https://www.medrxiv.org/content/10.1101/2020.04.01.20049825v1.full.pdf\n",
+    "initN = 1380000000\n",
+    "# S0 = 966000000\n",
+    "initE = 1000\n",
+    "initI = 47\n",
+    "initR = 0\n",
+    "sigma = 1/5.2\n",
+    "gamma = 1/2.9\n",
+    "R0 = 4\n",
+    "beta = R0 * gamma\n",
+    "days = 112\n",
+    "\n",
+    "\n",
+    "def F():\n",
+    "    def ode_model(z, t, beta, sigma, gamma):\n",
+    "        \"\"\"\n",
+    "        Reference https://www.idmod.org/docs/hiv/model-seir.html\n",
+    "        \"\"\"\n",
+    "        S, E, I, R = z\n",
+    "        N = S + E + I + R\n",
+    "        dSdt = -beta*S*I/N\n",
+    "        dEdt = beta*S*I/N - sigma*E\n",
+    "        dIdt = sigma*E - gamma*I\n",
+    "        dRdt = gamma*I\n",
+    "        return [dSdt, dEdt, dIdt, dRdt]\n",
+    "    def ode_solver(t, initial_conditions, params):\n",
+    "        initE, initI, initR, initN = initial_conditions\n",
+    "        beta, sigma, gamma = params['beta'].value, params['sigma'].value, params['gamma'].value\n",
+    "        initS = initN - (initE + initI + initR)\n",
+    "        res = odeint(ode_model, [initS, initE, initI, initR], t, args=(beta, sigma, gamma))\n",
+    "        return res\n",
+    "    response = requests.get('https://api.rootnet.in/covid19-in/stats/history')\n",
+    "    covid_history = response.json()['data']\n",
+    "\n",
+    "    keys = ['day', 'total', 'confirmedCasesIndian', 'confirmedCasesForeign', 'confirmedButLocationUnidentified',\n",
+    "            'discharged', 'deaths']\n",
+    "    df_covid_history = pd.DataFrame([[d.get('day'), \n",
+    "                                      d['summary'].get('total'), \n",
+    "                                      d['summary'].get('confirmedCasesIndian'), \n",
+    "                                      d['summary'].get('confirmedCasesForeign'),\n",
+    "                                      d['summary'].get('confirmedButLocationUnidentified'),\n",
+    "                                      d['summary'].get('discharged'), \n",
+    "                                      d['summary'].get('deaths')] \n",
+    "                                     for d in covid_history],\n",
+    "                        columns=keys)\n",
+    "    df_covid_history = df_covid_history.sort_values(by='day')\n",
+    "    df_covid_history['infected'] = df_covid_history['total'] - df_covid_history['discharged'] - df_covid_history['deaths']\n",
+    "    df_covid_history['total_recovered_or_dead'] = df_covid_history['discharged'] + df_covid_history['deaths']\n",
+    "\n",
+    "    # ref: https://www.medrxiv.org/content/10.1101/2020.04.01.20049825v1.full.pdf\n",
+    "    initN = 1380000000\n",
+    "    # S0 = 966000000\n",
+    "    initE = 1000\n",
+    "    initI = 47\n",
+    "    initR = 0\n",
+    "    sigma = 1/5.2\n",
+    "    gamma = 1/2.9\n",
+    "    R0 = 4\n",
+    "    beta = R0 * gamma\n",
+    "    days = 112\n",
+    "    \n",
+    "    params = Parameters()\n",
+    "    params.add('beta', value=beta, min=0, max=10)\n",
+    "    params.add('sigma', value=sigma, min=0, max=10)\n",
+    "    params.add('gamma', value=gamma, min=0, max=10)\n",
+    "\n",
+    "\n",
+    "    def main(initE, initI, initR, initN, beta, sigma, gamma, days, param_fitting):\n",
+    "        initial_conditions = [initE, initI, initR, initN]\n",
+    "        params['beta'].value, params['sigma'].value,params['gamma'].value = [beta, sigma, gamma]\n",
+    "        tspan = np.arange(0, days, 1)\n",
+    "        sol = ode_solver(tspan, initial_conditions, params)\n",
+    "        S, E, I, R = sol[:, 0], sol[:, 1], sol[:, 2], sol[:, 3]\n",
+    "        \n",
+    "        # Create traces\n",
+    "        fig = go.Figure()\n",
+    "        if not param_fitting:\n",
+    "            fig.add_trace(go.Scatter(x=tspan, y=S, mode='lines+markers', name='Susceptible'))\n",
+    "            fig.add_trace(go.Scatter(x=tspan, y=E, mode='lines+markers', name='Exposed'))\n",
+    "        fig.add_trace(go.Scatter(x=tspan, y=I, mode='lines+markers', name='Infected'))\n",
+    "        fig.add_trace(go.Scatter(x=tspan, y=R, mode='lines+markers',name='Recovered'))\n",
+    "        if param_fitting:\n",
+    "            fig.add_trace(go.Scatter(x=tspan, y=df_covid_history.infected, mode='lines+markers',\\\n",
+    "                                 name='Infections Observed', line = dict(dash='dash')))\n",
+    "            fig.add_trace(go.Scatter(x=tspan, y=df_covid_history.total_recovered_or_dead, mode='lines+markers',\\\n",
+    "                                 name='Recovered/Deceased Observed', line = dict(dash='dash')))\n",
+    "        \n",
+    "        if days <= 30:\n",
+    "            step = 1\n",
+    "        elif days <= 90:\n",
+    "            step = 7\n",
+    "        else:\n",
+    "            step = 30\n",
+    "        \n",
+    "        # Edit the layout\n",
+    "        fig.update_layout(title='Simulation of SEIR Model',\n",
+    "                           xaxis_title='Day',\n",
+    "                           yaxis_title='Counts',\n",
+    "                           title_x=0.5,\n",
+    "                          width=900, height=600\n",
+    "                         )\n",
+    "        fig.update_xaxes(tickangle=-90, tickformat = None, tickmode='array', tickvals=np.arange(0, days + 1, step))\n",
+    "        if not os.path.exists(\"images\"):\n",
+    "            os.mkdir(\"images\")\n",
+    "        fig.show()\n",
+    "        \n",
+    "        observed_IR = df_covid_history.loc[:, ['infected', 'total_recovered_or_dead']].values\n",
+    "        \n",
+    "        tspan_fit_pred = np.arange(0, observed_IR.shape[0], 1)\n",
+    "        #params['beta'].value = result.params['beta'].value\n",
+    "        #params['sigma'].value = result.params['sigma'].value\n",
+    "        #params['gamma'].value = result.params['gamma'].value\n",
+    "        fitted_predicted = ode_solver(tspan_fit_pred, initial_conditions, params)\n",
+    "        fitted_predicted_IR = fitted_predicted[:, 2:4]\n",
+    "        print(\"Fitted MAE\")\n",
+    "        print('Infected: ', np.mean(np.abs(fitted_predicted_IR[:days, 0] - observed_IR[:days, 0])))\n",
+    "        print('Recovered/Deceased: ', np.mean(np.abs(fitted_predicted_IR[:days, 1] - observed_IR[:days, 1])))\n",
+    "\n",
+    "        print(\"\\nFitted RMSE\")\n",
+    "        print('Infected: ', np.sqrt(np.mean((fitted_predicted_IR[:days, 0] - observed_IR[:days, 0])**2)))\n",
+    "        print('Recovered/Deceased: ', np.sqrt(np.mean((fitted_predicted_IR[:days, 1] - observed_IR[:days, 1])**2)))\n",
+    "    \n",
+    "\n",
+    "    interact(main, initE=IntSlider(min=0, max=100000, step=1, value=initE, description='initE', style=style, \\\n",
+    "                               layout=slider_layout),\n",
+    "               initI=IntSlider(min=0, max=100000, step=10, value=initI, description='initI', style=style, \\\n",
+    "                               layout=slider_layout),\n",
+    "               initR=IntSlider(min=0, max=100000, step=10, value=initR, description='initR', style=style, \\\n",
+    "                               layout=slider_layout),\n",
+    "               initN=IntSlider(min=0, max=1380000000, step=1000, value=initN, description='initN', style=style, \\\n",
+    "                               layout=slider_layout),\n",
+    "               beta=FloatSlider(min=0, max=4, step=0.01, value=beta, description='Infection rate', style=style, \\\n",
+    "                                layout=slider_layout),\n",
+    "               sigma=FloatSlider(min=0, max=4, step=0.01, value=sigma, description='Incubation rate', style=style, \\\n",
+    "                                 layout=slider_layout),\n",
+    "               gamma=FloatSlider(min=0, max=4, step=0.01, value=gamma, description='Recovery rate', style=style, \\\n",
+    "                                 layout=slider_layout),\n",
+    "               days=IntSlider(min=0, max=600, step=7, value=days, description='Days', style=style, \\\n",
+    "                              layout=slider_layout),\n",
+    "               param_fitting=ToggleButton(value=False, description='Fitting Mode', disabled=False, button_style='', \\\n",
+    "             tooltip='Click to show fewer plots', icon='check-circle')\n",
+    "        );\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    #return \n",
+    "\n",
+    "\n",
+    "\n",
     "F()"
    ]
   },
